// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Registry / Listing / Listing Summary Card 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-grYksN figaZI"
    >
      <div>
        <div
          className="sc-exAgwC krBPCl"
        >
          <a
            href="/listing/0x0a"
            onClick={[Function]}
          >
            <div
              className="sc-cQFLBn iYjzGy"
            >
              <div
                className="sc-gojNiO eCGfeF"
              >
                <figure
                  className="sc-eilVRo kkHSao"
                />
                <div>
                  <h1
                    className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                  >
                    Block Club Chicago
                  </h1>
                  <div
                    className="sc-fOKMvo kqxQAS"
                  >
                    Block Club Chicago is a nonprofit, neighborhood news organization dedicated to delivering reliable, nonpartisan and esse...
                  </div>
                </div>
              </div>
              <div
                className="sc-krvtoX fkpEOJ"
              >
                <button
                  className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                  size="SMALL"
                  theme={
                    Object {
                      "invertedButtonBackground": "#FFFFFF",
                      "invertedButtonColor": "#2B56FF",
                    }
                  }
                  type="button"
                >
                  View Details
                </button>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Registry / Listing / Listing Summary
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Card
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    story
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    links
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    routerProps
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Registry / Listing / Listing Summary Card Grid 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-grYksN figaZI"
    >
      <div>
        <div
          className="sc-GMQeP kAdMpU"
        >
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0a"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Block Club Chicago
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Block Club Chicago is a nonprofit, neighborhood news organization dedicated to delivering reliable, nonpartisan and esse...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0b"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Cannabis Wire
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Cannabis Wire is an independent publication covering the multi-billion dollar cannabis industry, focusing on investigati...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0c"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Documented
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Documented covers New York City’s immigrants and the policies that affect their lives. We are an independent and nonpart...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0d"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Block Club Chicago
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Block Club Chicago is a nonprofit, neighborhood news organization dedicated to delivering reliable, nonpartisan and esse...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0e"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Cannabis Wire
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Cannabis Wire is an independent publication covering the multi-billion dollar cannabis industry, focusing on investigati...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div>
            <div
              className="sc-exAgwC krBPCl"
            >
              <a
                href="/listing/0x0f"
                onClick={[Function]}
              >
                <div
                  className="sc-cQFLBn iYjzGy"
                >
                  <div
                    className="sc-gojNiO eCGfeF"
                  >
                    <figure
                      className="sc-eilVRo kkHSao"
                    />
                    <div>
                      <h1
                        className="sc-fYiAbW kpzYyf sc-bwzfXH bpNcpr"
                      >
                        Documented
                      </h1>
                      <div
                        className="sc-fOKMvo kqxQAS"
                      >
                        Documented covers New York City’s immigrants and the policies that affect their lives. We are an independent and nonpart...
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-krvtoX fkpEOJ"
                  >
                    <button
                      className="sc-kkGfuU hYLHhU sc-hMqMXs dMEdoq"
                      size="SMALL"
                      theme={
                        Object {
                          "invertedButtonBackground": "#FFFFFF",
                          "invertedButtonColor": "#2B56FF",
                        }
                      }
                      type="button"
                    >
                      View Details
                    </button>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Registry / Listing / Listing Summary
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Card Grid
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    story
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    links
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    routerProps
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Registry / Listing / Listing Summary Card Rejected 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-grYksN figaZI"
    >
      <div />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Registry / Listing / Listing Summary
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Card Rejected
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    story
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    links
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    routerProps
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
